# hexlet-django-blog

./: db.sqlite3  pyproject.toml  setup.cfg
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_rename_timestamp_article_created_at.py
hexlet_django_blog/article/templates/article/: article.html  create.html  index.html  index1.html
hexlet_django_blog/templates/: about.html  categories.html  index.html  layout.html  navigation.html
